# chaindexer

./: .gitignore  .gitmodules  CONTRIBUTING.md  Cargo.toml  LICENSE-APACHE  README.md  notes.md
.github/workflows/: build.yml  ci.yml  test.yml
chaindexer/: Cargo.toml  README.md  build.rs
chaindexer/src/: lib.rs  main.rs  partition_index.rs  table_api.rs  util.rs
chaindexer/src/chains/: assets.rs  entity.rs  mod.rs  polygon.rs
chaindexer/src/chains/eth/: mod.rs  raw_data.rs  rpc_api.rs  test.rs
chaindexer/src/cli/: index.rs  mod.rs
chaindexer/src/queryeng/: mod.rs
chaindexer/src/storage/: conf.rs  ipfs.rs  location.rs  memstore.rs  storage_api.rs
chaindexer/testdata/: eth-req-res-batch-tests.json
chaindexer/testdata/_testdir6e169f2c/: testy.json
chaindexer/testdata/_testdir6e169f2c/ethereum/blocks/: 15000000.parquet  15000025.parquet
chaindexer/testdata/_testdir6e169f2c/ethereum/logs/: 15000000.parquet  15000025.parquet#1
chaindexer/testdata/_testdir88921ae8/eth/blocks/: 15000000.parquet#1
chaindexer/tests/: test_build_chaindata.rs
chaindexer_data_scraper/: .gitignore  Cargo.toml  README.md
chaindexer_data_scraper/src/: lib.rs
data-scraper/: Cargo.toml  README.md
data-scraper/src/: assets.rs  lib.rs
data/subgraphs/: README.md  mapping.json
src/: lib.rs  table_api.rs  test.rs  util.rs
src/chains/: chain_api.rs  entity.rs  mod.rs  test.rs
src/chains/eth/: column_defs.rs  mod.rs  rpc_api.rs  test.rs
src/cli/: build_index.rs  conf.rs  index.rs  mod.rs  sql.rs
src/queryeng/: ctx.rs  provider.rs  schema.rs  test.rs
src/storage/: ipfs_objstore.rs  mod.rs  storage_api.rs
tests/: shared.rs
