[package]
name = "chaindexer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
default = ["eth"]
eth = []

[dependencies]
# core deps
datafusion = { version = "18.0.0", features = ["scheduler"] }
tokio = { version = "1.24.2", features = [
  "full", # todo: change features from "full"
] }
tokio-util = { version = "0.7.4", features = ["io"] }

# utils
futures = "0.3.25"
reqwest = { version = "0.11.13", features = ["json", "multipart", "stream"] }
once_cell = "0.2.0"
async-trait = "0.1.59"
chrono = "0.4.23"
object_store = { version = "0.5.2", features = ["aws"] }
num = { version = "0.4.0", features = ["num-bigint"] }
dirs = "4.0.0"
bytes = { version = "1.3.0", features = ["std"] }
rand = "0.8.5"
async-stream = "0.3.3"
parking_lot = "0.12"
dashmap = "5.4.0"
strum = "0.24.1"
url = "2.3.1"
itertools = "0.10.5"

# serde crates
serde = "1"
serde_derive = "1.0.148"
serde_json = "1"
toml = "0.5.10"
# cli
clap = { version = "4.0.32", features = ["derive", "env"] }
dialoguer = "0.10.2"
colored = "2.0.0"

# error handling
anyhow = { version = "1", features = ["backtrace"] }
thiserror = "1"
dotenv = "0.15.0"
# logging
log = "0.4"
env_logger = "0.9.0"
# ethereum-specific
hex = "0.4.3"
ethereum_abi = "0.4.0"
ethereum-types = "0.14.1"
# storage
rusqlite = { version = "0.28.0", features = ["bundled", "backup"] }
tempfile = "3.3.0"
strum_macros = "0.24.3"


[dev-dependencies]
# for simple test http servers
tide = "0.16.0"
# these are macros for testing
paste = "1.0"
test-case = "2.2.2"
# not currently using this one anywhere yet but seems cool
static_assertions = "1.1.0"
