[package]
name = "chaindexer_data_scraper"
version = "0.1.0"
edition = "2021"
description = "Blockchain indexer and query engine"
license = "MIT OR Apache-2.0"
repository = "https://github.com/operator-io/chaindexer"
readme = "README.md"
homepage = "https://github.com/operator-io/chaindexer"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.69"
env_logger = "0.10.0"
log = "0.4.17"
once_cell = "1.17.1"
serde = { version = "1.0.152", features = ["serde_derive"] }
serde_json = "1.0.94"
